Replaced deprecated method calls in ImageLab and Scale